Se ajsuta estilo de header y footer  para home

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,20 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="footer-links">
+    <a href="#">Contact Support</a>
+    <a href="#">Terms and Conditions</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Cookie Policy</a>
+  </div>
+  <div class="footer-right">
+    <span class="icon">
+      <mat-icon fontIcon="translate"></mat-icon>
+    </span>
+    <mat-form-field>
+      <mat-label>Basic native select</mat-label>
+      <mat-select>
+        <mat-option value="option1">English</mat-option>
+        <mat-option value="option2">Español</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</footer>
