--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<header class="container">
+  <div class="buttons">
+    <button mat-stroked-button>Log In</button>
+    <button mat-flat-button color="primary">Link Your Card</button>
+  </div>
+</header>
