--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<app-header />
+<div class="container">
+  <div class="contenido-titulo">
+    <h1 class="custom-text">
+      Link your <span class="black-text">business card</span> to
+      <span class="blue-text">unlock cashback</span> offers
+    </h1>
+  </div>
+</div>
+<app-footer />
