--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="contenido-titulo">
+  <h1 class="custom-text">
+    Link your <span class="black-text">business card</span> to
+    <span class="blue-text">unlock cashback</span> offers
+  </h1>
+</div>
+
+<div class="contenido-titulo">
+  <h1 class="custom-text">Explorer Instant Coupons</h1>
+</div>
+<app-menu />
