--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -5,6 +5,9 @@
   </h1>
 </div>
 
+<div class="contenido-btn">
+  <button mat-flat-button color="primary">Link Your Card</button>
+</div>
 <div class="contenido-titulo">
   <h1 class="custom-text">Explorer Instant Coupons</h1>
 </div>
