--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,1 +1,5 @@
-<p>menu works!</p>
+<div class="contenido-items">
+  @for (item of menuItems; track $index) {
+  <menu-item [item]="item" (clickItemEvent)="itemSelected($event)" />
+  }
+</div>
