Se mueven componentes

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -6,9 +6,7 @@
 </div>
 
 <div class="contenido-btn">
-  <button mat-flat-button color="primary">Link Your Card</button>
-</div>
-<div class="contenido-titulo">
-  <h1 class="custom-text">Explorer Instant Coupons</h1>
+  <button mat-flat-button color="primary">Link Your Card ></button>
 </div>
 <app-menu />
+<app-marcas />
