--- a/src/app/features/menu/menu.component.html
+++ b/src/app/features/menu/menu.component.html
@@ -1,3 +1,6 @@
+<div class="contenido-titulo">
+  <h1 class="custom-text">Explorer Instant Coupons</h1>
+</div>
 <div class="contenido-items">
   @for (item of menuItems; track $index) {
   <menu-item [item]="item" (clickItemEvent)="itemSelected($event)" />
