--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -1,49 +1,5 @@
-.contenido-titulo {
-  display: flex;
-  justify-content: center;
-
-  .custom-text {
-    display: block;
-    font-size: 56px;
-    width: 50rem;
-    line-height: 1.2;
-    text-align: center;
-
-    .black-text {
-      color: black;
-    }
-
-    .blue-text {
-      color: blue;
-    }
-
-    @media (min-width: 1201px) {
-      font-size: 56px;
-      width: 50rem;
-    }
-
-    @media (max-width: 1200px) and (min-width: 769px) {
-      font-size: 50px;
-      width: 40rem;
-    }
-
-    @media (max-width: 768px) and (min-width: 481px) {
-      font-size: 45px;
-      width: 30rem;
-    }
-
-    @media (max-width: 480px) and (min-width: 321px) {
-      font-size: 35px;
-      width: 20rem;
-    }
-
-    @media (max-width: 320px) {
-      font-size: 28px;
-      width: 16rem;
-    }
-  }
-}
 .contenido-btn {
   display: flex;
   justify-content: center;
+  margin: 4rem 0;
 }
