Se maqueta y se cargan valores

--- a/src/app/features/marcas/marcas.component.html
+++ b/src/app/features/marcas/marcas.component.html
@@ -1,1 +1,26 @@
-<p>marcas works!</p>
+<div class="contenido-filter">
+  <h2>Featured Instant Coupons ({{ marcas.length }})</h2>
+  <div class="btn-filtros">
+    <button mat-mini-fab color="primary">
+      <mat-icon>format_list_bulleted</mat-icon>
+    </button>
+    <button mat-mini-fab color="primary">
+      <mat-icon>grid_view</mat-icon>
+    </button>
+    <mat-form-field>
+      <mat-label>SORT BY</mat-label>
+      <mat-select>
+        <mat-option value="option1">Option 1</mat-option>
+        <mat-option value="option2">Option 2</mat-option>
+        <mat-option value="option3">Option 3</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</div>
+@if (cargando) {
+<div class="contenido-loader">
+  <mat-spinner></mat-spinner>
+</div>
+} @else { @for (item of marcas; track $index) {
+<app-marca />
+} }
