--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -6,6 +6,7 @@
   background-color: #f1f2f6;
   border-top: 1px solid #e0e0e0;
   height: 10rem;
+  margin-top: 3rem;
 
   .footer-links {
     display: flex;
