Se ajustan estilso

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="container">
   <div class="buttons">
     <button mat-stroked-button>Log In</button>
-    <button mat-flat-button color="primary">Link Your Card</button>
+    <button mat-flat-button color="primary">LINK YOUR CARD ></button>
   </div>
 </header>
