Se crea compponente detalle

--- a/src/app/shared/components/detail/detail.component.html
+++ b/src/app/shared/components/detail/detail.component.html
@@ -1,1 +1,24 @@
-<p>detail works!</p>
+<mat-card class="custom-card">
+  <div class="floating-image">
+    <img
+      [src]="marca.imagen || 'assets/images/no-image.jpg'"
+      [alt]="marca.nombreMarca"
+      class="circular-image"
+      [matTooltip]="marca.nombreMarca"
+    />
+  </div>
+  <img
+    mat-card-image
+    [src]="marca.background || 'assets/images/no-image.jpg'"
+    [alt]="marca.nombreMarca"
+    class="card-image"
+  />
+  <mat-card-content>
+    <div class="card-badge">
+      <mat-icon>local_atm</mat-icon>
+      <span class="badge-text">Cashback</span>
+    </div>
+    <p>{{ marca.nombreMarca }}</p>
+    <h3>{{ marca.descripcion }}</h3>
+  </mat-card-content>
+</mat-card>
