--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,12 +1,15 @@
-<div class="contenido-titulo">
-  <h1 class="custom-text">
-    Link your <span class="black-text">business card</span> to
-    <span class="blue-text">unlock cashback</span> offers
-  </h1>
-</div>
+<div class="container">
+  <div class="contenido-titulo">
+    <h1 class="custom-text">
+      Link your <span class="black-text">business card</span> to
+      <span class="blue-text">unlock cashback</span> offers
+    </h1>
+  </div>
 
-<div class="contenido-btn">
-  <button mat-flat-button color="primary">Link Your Card ></button>
+  <div class="contenido-btn">
+    <button mat-flat-button color="primary">LINK YOUR CARD ></button>
+  </div>
+  <app-menu />
+  <app-marcas />
 </div>
-<app-menu />
-<app-marcas />
+<app-details />
