--- a/src/app/features/details/details.component.html
+++ b/src/app/features/details/details.component.html
@@ -7,7 +7,12 @@
     }
   </div>
 
-  <button mat-raised-button color="primary" class="link-button">
-    LINK YOUR CARD >
-  </button>
+  <div class="btn-content">
+    <btn-text-icon
+      [title]="'LINK YOUR CARD'"
+      [icon]="'chevron_right'"
+      [matBtn]="false"
+      color="primary"
+    />
+  </div>
 </div>
