--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -7,7 +7,12 @@
   </div>
 
   <div class="contenido-btn">
-    <button mat-flat-button color="primary">LINK YOUR CARD ></button>
+    <btn-text-icon
+      [title]="'LINK YOUR CARD'"
+      [icon]="'chevron_right'"
+      [matBtn]="false"
+      color="primary"
+    />
   </div>
   <app-menu />
   <app-marcas />
