Se ajusta descripción

--- a/src/app/shared/components/detail/detail.component.html
+++ b/src/app/shared/components/detail/detail.component.html
@@ -21,7 +21,7 @@
       <span class="badge-text">{{ badgeTitle }}</span>
     </div>
     <p>{{ marca.nombreMarca }}</p>
-    <h3>{{ marca.descripcion }}</h3>
+    <h3>{{ marca['descripción'] }}</h3>
   </mat-card-content>
   @if (!isCashback) {
   <mat-card-actions>
