--- a/src/app/shared/components/menu-item/menu-item.component.html
+++ b/src/app/shared/components/menu-item/menu-item.component.html
@@ -1,5 +1,5 @@
 <mat-chip
   (click)="clickItemEvent.emit(item.idMenu)"
   [ngClass]="{'active-chip': item.active}"
-  >{{ item.descripcion }}</mat-chip
+  >{{ item['descripción'] }}</mat-chip
 >
