--- a/src/app/features/details/details.component.html
+++ b/src/app/features/details/details.component.html
@@ -1,5 +1,5 @@
 <div class="container-details">
-  <h1 class="header">Unlock the full power of</h1>
+  <h1 class="header">{{(details$ | async)?.['title'] ?? ''}}</h1>
 
   <div class="cards-container">
     @for (marca of marcas; track $index) {
@@ -9,7 +9,7 @@
 
   <div class="btn-content">
     <btn-text-icon
-      [title]="'LINK YOUR CARD'"
+      [title]="(details$ | async)?.['linkYoCard'] ?? ''"
       [icon]="'chevron_right'"
       [matBtn]="false"
       color="primary"
