Se agrga lenguaje en menu

--- a/src/app/features/menu/menu.component.html
+++ b/src/app/features/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="contenido-titulo">
-  <h1 class="custom-text">Explorer Instant Coupons</h1>
+  <h1 class="custom-text">{{(menu$ | async)?.['title'] ?? ''}}</h1>
 </div>
 <div class="contenido-items">
   @if (cargando) {
