--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="contenido-titulo">
-    <h1 class="custom-text">
-      Link your <span class="black-text">business card</span> to
-      <span class="blue-text">unlock cashback</span> offers
-    </h1>
+    <h1
+      class="custom-text"
+      [innerHTML]="((home$ | async)?.['title'] ?? '') | textColor"
+    ></h1>
   </div>
 
   <div class="contenido-btn">
     <btn-text-icon
-      [title]="'LINK YOUR CARD'"
+      [title]="(home$ | async)?.['linkYoCard'] ?? ''"
       [icon]="'chevron_right'"
       [matBtn]="false"
       color="primary"
