Se agrega lenguaje a componete detalle

--- a/src/app/shared/components/detail/detail.component.html
+++ b/src/app/shared/components/detail/detail.component.html
@@ -21,11 +21,11 @@
       <span class="badge-text">{{ badgeTitle }}</span>
     </div>
     <p>{{ marca.nombreMarca }}</p>
-    <h3>{{ marca['descripción'] }}</h3>
+    <h3>{{ marca["descripción"] }}</h3>
   </mat-card-content>
   @if (!isCashback) {
   <mat-card-actions>
-    <btn-text-icon [title]="'Get Coupon'" [icon]="'chevron_right'" />
+    <btn-text-icon [title]="translations.btnCoupon" icon="chevron_right" />
   </mat-card-actions>
   }
 </mat-card>
