--- a/src/app/features/marcas/marcas.component.html
+++ b/src/app/features/marcas/marcas.component.html
@@ -25,7 +25,7 @@
   }
 </div>
 } @else { @for (marca of marcasFilter; track $index) {
-<app-detail-row />
+<app-detail-row [marca]="marca" />
 } } } @if (marcasFilter.length !== marcas.length) {
 <div class="contenido-btn">
   <btn-text-icon
