--- a/src/app/shared/components/menu-item/menu-item.component.scss
+++ b/src/app/shared/components/menu-item/menu-item.component.scss
@@ -1,4 +1,3 @@
-/* Estado neutro */
 .mat-chip {
   background-color: #f0f0f0;
   color: #333;
@@ -8,7 +7,6 @@
   transition: background-color 0.3s, color 0.3s;
 }
 
-/* Estado activo */
 .active-chip {
   background-color: #333 !important;
   color: white !important;
@@ -16,7 +14,7 @@
     color: white !important;
   }
   &:hover {
-    background-color: #d6d6d6 !important; // Fondo gris más oscuro al pasar el cursor
+    background-color: #d6d6d6 !important;
     color: #333 !important;
   }
 }
