--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,11 +1,19 @@
 .container {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   padding: 20px;
 
   .buttons {
     display: flex;
     gap: 10px;
+  }
+
+  h2 {
+    font-weight: 300;
+    margin-bottom: 0px;
   }
 }
 
