--- a/ventures-soft/src/global.scss
+++ b/ventures-soft/src/global.scss
@@ -35,3 +35,47 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 // @import "@ionic/angular/css/palettes/dark.system.css";
+// @import "@angular/material/theming";
+
+
+.contenido-titulo {
+  display: flex;
+  justify-content: center;
+
+  .custom-text {
+    display: block;
+    font-size: 56px;
+    width: 50rem;
+    line-height: 1.2;
+    text-align: center;
+
+    .blue-text {
+      color: blue;
+    }
+
+    @media (min-width: 1201px) {
+      font-size: 56px;
+      width: 50rem;
+    }
+
+    @media (max-width: 1200px) and (min-width: 769px) {
+      font-size: 50px;
+      width: 40rem;
+    }
+
+    @media (max-width: 768px) and (min-width: 481px) {
+      font-size: 45px;
+      width: 30rem;
+    }
+
+    @media (max-width: 480px) and (min-width: 321px) {
+      font-size: 35px;
+      width: 20rem;
+    }
+
+    @media (max-width: 320px) {
+      font-size: 28px;
+      width: 16rem;
+    }
+  }
+}
