--- a/ventures-soft/src/app/layouts/home/home.component.html
+++ b/ventures-soft/src/app/layouts/home/home.component.html
@@ -1,15 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Home
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header />
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Home</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+    <app-features-home />
 </ion-content>
+<app-footer />
