--- a/ventures-soft/src/app/layouts/login/login.component.html
+++ b/ventures-soft/src/app/layouts/login/login.component.html
@@ -1,3 +1,8 @@
-<p>
-  login works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Login</ion-title>
+    <ion-buttons slot="end">
+      
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
