Se importa modulo de componentes

--- a/ventures-soft/src/app/features/features-home/features-home.component.html
+++ b/ventures-soft/src/app/features/features-home/features-home.component.html
@@ -6,4 +6,12 @@
     ></h1>
   </div>
   <app-tabla />
+  <div class="contenido-btn">
+    <app-btn-text-icon
+      [title]="translations['linkYoCard'] ?? ''"
+      [icon]="'chevron_right'"
+      [matBtn]="false"
+      color="primary"
+    />
+  </div>
 </ion-content>
