--- a/ventures-soft/src/app/layouts/login/login.component.html
+++ b/ventures-soft/src/app/layouts/login/login.component.html
@@ -1,8 +1,3 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-    <ion-buttons slot="end">
-      
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true">
+  <app-features-login />
+</ion-content>
