--- a/ventures-soft/src/app/shared/components/header/header.component.html
+++ b/ventures-soft/src/app/shared/components/header/header.component.html
@@ -1,15 +1,26 @@
 <ion-header>
   <ion-toolbar>
     <ion-title *ngIf="userSession">
-      {{ translations["login-login-success"] }}
+      {{
+        translations[userSession ? "login-login-success" : "header-loginOut"]
+      }}
       {{ userSession }}
     </ion-title>
     <ion-buttons slot="end">
-      <app-btn-text-icon
-        [title]="translations['header-login']"
-        [icon]="'chevron_right'"
-        (click)="goToLogin()"
-      />
+      <ng-container *ngIf="userSession; else logIn">
+        <app-btn-text-icon
+          [title]="translations['header-loginOut']"
+          [icon]="'chevron_right'"
+          (click)="logOut()"
+        />
+      </ng-container>
+      <ng-template #logIn>
+        <app-btn-text-icon
+          [title]="translations['header-login']"
+          [icon]="'chevron_right'"
+          (click)="goToLogin()"
+        />
+      </ng-template>
 
       <ion-item-divider class="invisible-divider"></ion-item-divider>
 
