--- a/ventures-soft/src/app/features/marcas/marcas.component.scss
+++ b/ventures-soft/src/app/features/marcas/marcas.component.scss
@@ -5,7 +5,8 @@
   margin-top: 1rem;
 
   h2 {
-    margin: 0px;
+    text-align: center;
+    margin: 2rem 0rem 1rem;
   }
 
   .btn-filtros {
@@ -40,7 +41,7 @@
   .contenido-filter {
     grid-template-columns: 1fr;
     .btn-filtros {
-      justify-content: flex-start;
+      justify-content: center;
     }
   }
 }
